# mvrp

./: .gitignore  .gitmodules  CMakeLists.txt
bulletproof/: CMakeLists.txt  build.sh
bulletproof/common/: CMakeLists.txt
bulletproof/crypto/: CMakeLists.txt
bulletproof/easylogging++/: CMakeLists.txt
bulletproof/epee/: CMakeLists.txt
bulletproof/ringct/: CMakeLists.txt
bulletproof/serialization/: CMakeLists.txt
compiler/: CMakeLists.txt
libsnark/: .gitignore  CMakeLists.txt
libsnark/depends/libff/libff/algebra/curves/bn128/: bn128_g1.cpp
libsnark/depends/libff/libff/common/: profiling.hpp
libsnark/libsnark/: CMakeLists.txt
libsnark/libsnark/zk_proof_systems/kzg/: kzg.tcc
libsnark/libsnark/zk_proof_systems/kzg/tests/: test_kzg.cpp
mvrp/: CMakeLists.txt  mvrp scheme.md
mvrp/includes/: basic_types.hpp  bullet.hpp  circuit.hpp  circuit_generator.hpp  circuit_prover.hpp  circuit_verifier.hpp  ipa.hpp  kzg.hpp  linear_combination.hpp  math_operations.hpp  prover.hpp  prover_circuit.hpp  range.hpp  range_prover.hpp  range_verifier.hpp  setup.hpp  structs.hpp  types.hpp  verifier_circuit.hpp
mvrp/py_tests/: test_poly.py
mvrp/src/: basic_types.cpp  circuit_generator.cpp  circuit_prover.cpp  circuit_verifier.cpp  ipa.cpp  kzg.cpp  linear_combination.cpp  math_operations.cpp  microbenchmark.cpp  prover.cpp  prover_circuit.cpp  range_prover.cpp  range_verifier.cpp  setup.cpp  structs.cpp  verifier_circuit.cpp
mvrp/tests/: microbenchmark.cpp  test_circuit.cpp  test_circuit_gen.cpp  test_linear_combination.cpp  test_matrix_mult.cpp  test_poly_merge.cpp  test_range.cpp  test_shift_and_reverse.cpp
our_cred/: CMakeLists.txt  expriment_design.md  libff库介绍.md
our_cred/includes/: circuit_generator.hpp  ipa.hpp  kzg.hpp  prover.hpp  structs.hpp  verifier.hpp
our_cred/src/: CMakeLists.txt  circuit_generator.cpp  ipa.cpp  kzg.cpp  main.cpp  prover.cpp  structs.cpp  test_naive.cpp  verifier.cpp
ref/bulletproof/ringct/: rctTypes.h
